--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
