--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "serve": "docusaurus serve"
   },
   "dependencies": {
+    "@agile-ts/core": "0.0.5",
+    "@agile-ts/react": "0.0.5",
     "@docusaurus/core": "2.0.0-alpha.66",
-    "@docusaurus/preset-classic": "2.0.0-alpha.66",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.66",
     "@mdx-js/react": "^1.5.8",
     "clsx": "^1.1.1",
     "react": "^16.8.4",
