--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@agile-ts/core": "0.0.5",
     "@agile-ts/react": "0.0.5",
-    "@docusaurus/core": "2.0.0-alpha.66",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.66",
+    "@docusaurus/core": "2.0.0-alpha.69",
+    "@docusaurus/module-type-aliases": "^2.0.0-alpha.69",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.69",
     "@mdx-js/react": "^1.5.8",
+    "@tsconfig/docusaurus": "^1.0.2",
+    "@types/react-helmet": "^6.1.0",
+    "@types/react-router-dom": "^5.1.6",
     "clsx": "^1.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -24,7 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
+    "@types/react": "^17.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.0"
   },
