--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^1.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.1"
   },
