--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@docusaurus/core": "2.0.0-alpha.70",
     "@docusaurus/module-type-aliases": "^2.0.0-alpha.70",
     "@docusaurus/preset-classic": "^2.0.0-alpha.70",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-alpha.70",
     "@mdx-js/react": "^1.6.21",
     "@tsconfig/docusaurus": "^1.0.2",
     "clsx": "^1.1.1",
