--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@docusaurus/module-type-aliases": "^2.0.0-alpha.70",
     "@docusaurus/preset-classic": "^2.0.0-alpha.70",
     "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-alpha.70",
+    "@docusaurus/theme-live-codeblock": "^2.0.0-alpha.70",
     "@mdx-js/react": "^1.6.21",
     "@tsconfig/docusaurus": "^1.0.2",
     "clsx": "^1.1.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-live": "^2.2.3",
     "react-spring": "^8.0.27",
     "styled-components": "^5.1.1"
   },
