added scss and optimized menu design

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mdx-js/react": "^1.6.21",
     "@tsconfig/docusaurus": "^1.0.2",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-sass": "^0.1.11",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-live": "^2.2.3",
