--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.8.4",
     "react-live": "^2.2.3",
     "react-spring": "^8.0.27",
+    "react-toastify": "^6.2.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
