--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "docusaurus-plugin-sass": "^0.1.11",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-icons": "^4.1.0",
     "react-live": "^2.2.3",
     "react-spring": "^8.0.27",
     "react-toastify": "^6.2.0",
