--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-live": "^2.2.3",
     "react-spring": "^8.0.27",
     "react-toastify": "^6.2.0",
+    "react-typist": "^2.0.5",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
