--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
-    "serve": "docusaurus serve"
+    "serve": "docusaurus serve",
+    "buildserve": "yarn run build && yarn run serve"
   },
   "dependencies": {
     "@agile-ts/core": "0.0.10",
@@ -28,7 +29,7 @@
     "react-live": "^2.2.3",
     "react-spring": "^8.0.27",
     "react-toastify": "^6.2.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
