--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.0"
+    "@types/styled-components": "^5.1.0",
+    "typescript": "^4.1.5"
   },
   "browserslist": {
     "production": [
