--- a/package.json
+++ b/package.json
@@ -39,6 +39,13 @@
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-config-node": "^4.1.0",
+    "prettier": "2.1.2",
+    "ts-node": "^8.10.2",
     "typescript": "^4.1.5"
   },
   "browserslist": {
