--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "install-agile": "yalc add @agile-ts/core @agile-ts/react @agile-ts/api & yarn install"
   },
   "dependencies": {
-    "@agile-ts/api": "file:.yalc/@agile-ts/api",
-    "@agile-ts/core": "file:.yalc/@agile-ts/core",
-    "@agile-ts/react": "file:.yalc/@agile-ts/react",
+    "@agile-ts/api": "^0.0.11",
+    "@agile-ts/core": "^0.0.11",
+    "@agile-ts/react": "^0.0.11",
     "@docusaurus/core": "^2.0.0-alpha.70",
     "@docusaurus/module-type-aliases": "^2.0.0-alpha.70",
     "@docusaurus/preset-classic": "^2.0.0-alpha.70",
