added basic card swipe support

--- a/package.json
+++ b/package.json
@@ -34,17 +34,18 @@
     "react-icons": "^4.1.0",
     "react-live": "^2.2.3",
     "react-spring": "^8.0.27",
+    "react-swipeable": "^6.0.1",
     "react-toastify": "^6.2.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.0",
-    "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.17.0",
