--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "install-local-agile": "yalc add @agile-ts/core @agile-ts/react @agile-ts/api & yarn install"
   },
   "dependencies": {
-    "@agile-ts/api": "^0.0.16",
-    "@agile-ts/core": "^0.0.15",
+    "@agile-ts/api": "^0.0.19",
+    "@agile-ts/core": "0.1.0",
     "@agile-ts/event": "^0.0.5",
-    "@agile-ts/react": "^0.0.16",
-    "@docusaurus/core": "^2.0.0-beta.0",
-    "@docusaurus/module-type-aliases": "^2.0.0-beta.0",
-    "@docusaurus/preset-classic": "^2.0.0-beta.0",
-    "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.0",
-    "@docusaurus/theme-live-codeblock": "^2.0.0-beta.0",
+    "@agile-ts/react": "0.1.0",
+    "@docusaurus/core": "2.0.0-beta.0",
+    "@docusaurus/module-type-aliases": "2.0.0-beta.0",
+    "@docusaurus/preset-classic": "2.0.0-beta.0",
+    "@docusaurus/remark-plugin-npm2yarn": "2.0.0-beta.0",
+    "@docusaurus/theme-live-codeblock": "2.0.0-beta.0",
     "@mdx-js/react": "^1.6.21",
     "@tsconfig/docusaurus": "^1.0.2",
     "clsx": "^1.1.1",
