--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "install-docusaurus": "yalc add @docusaurus/core & yarn install",
     "prettier": "prettier --config .prettierrc --write \"**/*.{js,ts}\"",
     "lint": "eslint --cache \"**/*.{js,jsx,ts,tsx}\"",
-    "install-local-agile": "yalc add @agile-ts/core @agile-ts/react @agile-ts/api & yarn install"
+    "install:local:agile": "yalc add @agile-ts/core @agile-ts/react @agile-ts/api & yarn install"
   },
   "dependencies": {
     "@agile-ts/api": "^0.0.19",
-    "@agile-ts/core": "0.1.0",
+    "@agile-ts/core": "^0.1.0",
     "@agile-ts/event": "^0.0.5",
     "@agile-ts/react": "0.1.0",
     "@docusaurus/core": "2.0.0-beta.0",
@@ -37,7 +37,7 @@
     "react-spring": "^8.0.27",
     "react-swipeable": "^6.0.1",
     "react-toastify": "^6.2.0",
-    "styled-components": "^5.2.1"
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
@@ -46,7 +46,6 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.17.0",
