--- a/package.json
+++ b/package.json
@@ -22,29 +22,30 @@
     "@agile-ts/core": "file:.yalc/@agile-ts/core",
     "@agile-ts/event": "file:.yalc/@agile-ts/event",
     "@agile-ts/react": "file:.yalc/@agile-ts/react",
-    "@docusaurus/core": "2.0.0-beta.0",
-    "@docusaurus/module-type-aliases": "2.0.0-beta.0",
-    "@docusaurus/preset-classic": "2.0.0-beta.0",
-    "@docusaurus/remark-plugin-npm2yarn": "2.0.0-beta.0",
-    "@docusaurus/theme-live-codeblock": "2.0.0-beta.0",
-    "@mdx-js/react": "^1.6.21",
+    "@docusaurus/core": "2.0.0-beta.3",
+    "@docusaurus/module-type-aliases": "2.0.0-beta.3",
+    "@docusaurus/preset-classic": "2.0.0-beta.3",
+    "@docusaurus/remark-plugin-npm2yarn": "2.0.0-beta.3",
+    "@docusaurus/theme-live-codeblock": "2.0.0-beta.3",
+    "@mdx-js/react": "^1.6.22",
     "@tsconfig/docusaurus": "^1.0.2",
     "clsx": "^1.1.1",
-    "docusaurus-plugin-sass": "^0.1.11",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "docusaurus-plugin-sass": "^0.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-live": "^2.2.3",
     "react-spring": "^8.0.27",
     "react-swipeable": "^6.0.1",
     "react-toastify": "^6.2.0",
+    "sass": "^1.35.1",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.1",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
@@ -57,7 +58,7 @@
     "jest": "^26.6.3",
     "prettier": "2.1.2",
     "ts-node": "^8.10.2",
-    "typescript": "^4.1.5"
+    "typescript": "^4.3.5"
   },
   "browserslist": {
     "production": [
