--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@agile-ts/api": "file:.yalc/@agile-ts/api",
     "@agile-ts/core": "file:.yalc/@agile-ts/core",
     "@agile-ts/event": "file:.yalc/@agile-ts/event",
+    "@agile-ts/logger": "file:.yalc/@agile-ts/logger",
     "@agile-ts/proxytree": "file:.yalc/@agile-ts/proxytree",
     "@agile-ts/react": "file:.yalc/@agile-ts/react",
+    "@agile-ts/utils": "file:.yalc/@agile-ts/utils",
     "@docusaurus/core": "2.0.0-beta.3",
     "@docusaurus/module-type-aliases": "2.0.0-beta.3",
     "@docusaurus/preset-classic": "2.0.0-beta.3",
