--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "dependencies": {
     "@agile-ts/api": "^0.0.22",
-    "@agile-ts/core": "0.2.0",
+    "@agile-ts/core": "^0.2.3",
     "@agile-ts/event": "^0.0.11",
     "@agile-ts/logger": "^0.0.8",
-    "@agile-ts/proxytree": "^0.0.5",
-    "@agile-ts/react": "0.2.0",
+    "@agile-ts/proxytree": "^0.0.6",
+    "@agile-ts/react": "^0.2.0",
     "@agile-ts/utils": "^0.0.8",
     "@docusaurus/core": "2.0.0-beta.6",
     "@docusaurus/module-type-aliases": "2.0.0-beta.6",
