--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "install:prod:agile": "yarn add @agile-ts/core @agile-ts/react @agile-ts/api @agile-ts/event @agile-ts/proxytree @agile-ts/logger @agile-ts/utils  & yarn install"
   },
   "dependencies": {
-    "@agile-ts/api": "file:.yalc/@agile-ts/api",
-    "@agile-ts/core": "file:.yalc/@agile-ts/core",
-    "@agile-ts/event": "file:.yalc/@agile-ts/event",
-    "@agile-ts/logger": "file:.yalc/@agile-ts/logger",
-    "@agile-ts/proxytree": "file:.yalc/@agile-ts/proxytree",
-    "@agile-ts/react": "file:.yalc/@agile-ts/react",
-    "@agile-ts/utils": "file:.yalc/@agile-ts/utils",
+    "@agile-ts/api": "^0.0.23",
+    "@agile-ts/core": "^0.2.4",
+    "@agile-ts/event": "^0.0.12",
+    "@agile-ts/logger": "^0.0.9",
+    "@agile-ts/proxytree": "^0.0.7",
+    "@agile-ts/react": "^0.2.1",
+    "@agile-ts/utils": "^0.0.9",
     "@docusaurus/core": "2.0.0-beta.6",
     "@docusaurus/module-type-aliases": "2.0.0-beta.6",
     "@docusaurus/preset-classic": "2.0.0-beta.6",
