--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@agile-ts/proxytree": "^0.0.9",
     "@agile-ts/react": "^0.2.3",
     "@agile-ts/utils": "^0.0.11",
-    "@docusaurus/core": "2.0.0-beta.14",
-    "@docusaurus/module-type-aliases": "2.0.0-beta.14",
-    "@docusaurus/preset-classic": "2.0.0-beta.14",
-    "@docusaurus/remark-plugin-npm2yarn": "2.0.0-beta.14",
-    "@docusaurus/theme-live-codeblock": "2.0.0-beta.14",
+    "@docusaurus/core": "^2.0.0-beta.14",
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.14",
+    "@docusaurus/preset-classic": "^2.0.0-beta.14",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.14",
+    "@docusaurus/theme-live-codeblock": "^2.0.0-beta.14",
     "@mdx-js/react": "^1.6.22",
     "@tsconfig/docusaurus": "^1.0.4",
     "clsx": "^1.1.1",
